# mastodon-bluesky-sync

./: .gitignore  Cargo.toml  DEVELOPMENT.md  Dockerfile  INSTALL.md  README.md
.githooks/: README.md  reference-transaction
.github/workflows/: docker.yml  release.yml  testing.yml
src/: args.rs  bluesky_richtext.rs  bluesky_video.rs  config.rs  delete_favs.rs  delete_posts.rs  lib.rs  main.rs  mastodon_html.rs  post.rs  registration.rs  sync.rs
tests/: bluesky_sync_video.json  bsky_duplicate_sync_case.json  bsky_link_embed.json  bsky_link_embed_roundtrip.json  bsky_long_url.json  bsky_multiple_links.json  bsky_quote_attachment.json  bsky_quote_post.json  bsky_quote_video.json  bsky_repost_loop_case.json  bsky_repost_reply.json  bsky_video.json  mastodon_duplicate_sync_case.json  mastodon_html_links_sync.json  mastodon_link_embed_roundtrip.json  mastodon_link_issue.json  mastodon_long_url.json  mastodon_long_video.json  mastodon_mention.json  mastodon_nested_quote.json  mastodon_reblog_loop_case.json  mastodon_url_encoded.json
