[package]
name = "mastodon-bluesky-sync"
version = "0.1.0"
authors = ["Klaus Purer <klaus.purer@protonmail.ch>"]
description = "Synchronizes posts from Mastodon to Bluesky and back."
edition = "2021"

[dependencies]
anyhow = ">=1"
bsky-sdk = ">=0.1"
# Switching off default features removes a dependency to the "time" crate that
# contains a potential security issue.
# See https://github.com/time-rs/time/issues/293
chrono = { version = ">=0.4.23", default-features = false, features = ["std"] }
clap = { version = ">=3.2.22", features = ["derive"] }
env_logger = ">=0.7.1"
log = ">=0.4.8"
megalodon = ">=0.13"
serde = { version = ">=1.0", features = ["derive"] }
serde_json = ">=1.0.6"
serde_with = ">=2"
tokio = { version = ">=1", features = ["full"] }
toml = ">=0.4.5"
