[package]
name = "mastodon-bluesky-sync"
version = "0.2.0"
authors = ["Klaus Purer <klaus.purer@protonmail.ch>"]
description = "Synchronizes posts from Mastodon to Bluesky and back."
edition = "2021"

[dependencies]
anyhow = ">=1"
bsky-sdk = ">=0.1"
# Switching off default features removes a dependency to the "time" crate that
# contains a potential security issue.
# See https://github.com/time-rs/time/issues/293
chrono = { version = ">=0.4.23", default-features = false, features = ["std"] }
clap = { version = ">=3.2.22", features = ["derive"] }
env_logger = ">=0.7.1"
html-escape = ">=0.2.11"
log = ">=0.4.8"
megalodon = ">=0.14"
regex = ">=0.2.2"
reqwest = { version = ">=0.11", default-features = false, features = [
  "rustls-tls",
] }
serde = { version = ">=1.0", features = ["derive"] }
serde_json = ">=1.0.6"
serde_with = ">=2"
tempfile = ">=3"
tokio = { version = ">=1", features = ["full"] }
toml = ">=0.4.5"
unicode-segmentation = ">=1.9"
voca_rs = ">=1.14.0"
