[package]
name = "mastodon-bluesky-sync"
version = "0.4.0"
authors = ["Klaus Purer <klaus.purer@protonmail.ch>"]
description = "Synchronizes posts from Mastodon to Bluesky and back."
edition = "2024"

[dependencies]
bsky-sdk = { version = ">=0.1.22", default-features = false, features = [
  "rich-text",
] }
anyhow = ">=1"
atrium-xrpc-client = { version = ">=0.1", default-features = false, features = [
  "reqwest",
] }
# Switching off default features removes a dependency to the "time" crate that
# contains a potential security issue.
# See https://github.com/time-rs/time/issues/293
chrono = { version = ">=0.4.23", default-features = false, features = ["std"] }
clap = { version = ">=3.2.22", features = ["derive"] }
env_logger = ">=0.7.1"
html-escape = ">=0.2.11"
image_compressor = ">=1"
log = ">=0.4.8"
megalodon = ">=0.14"
regex = ">=0.2.2"
reqwest = { version = ">=0.11", default-features = false, features = [
  "rustls-tls",
] }
serde = { version = ">=1.0", features = ["derive"] }
serde_html_form = { version = ">=0.2.6", default-features = false }
serde_json = ">=1.0.6"
serde_with = ">=2"
tempfile = ">=3"
tokio = { version = ">=1", features = ["full"] }
toml = ">=0.4.5"
unicode-segmentation = ">=1.9"
url = ">=2.3.1"
voca_rs = ">=1.14.0"
webpage = { version = ">=2", default-features = false }
